--- a/src/main.css
+++ b/src/main.css
@@ -20,7 +20,7 @@ header h1 {
 	text-align: center;
 	margin: 0px;
 	color:white;
-	text-shadow: 0px 2px 1px  black;
+	text-shadow: 0px 2px 1px rgba(32, 32, 32, 0.7);
 }
 header h2 {
 	font-family: 'Open Sans', sans-serif;
@@ -33,22 +33,39 @@ header h2 {
 }
 
 #sdl, #graphics {
+	text-shadow: 0px 2px 1px rgba(64, 64, 64, 0.7);
 	display:block;
 	width:70%;
+	position: relative;
+	z-index: 1;
 	margin: 0 auto;
 	color:white;
+	/* background-color:rgba(200, 200, 200, 0.9); */
+	background-image: linear-gradient(to bottom, rgba(200, 200, 200, 1), rgba(150, 150, 150, 1));
+	box-shadow: 0px -1px 12px 2px lightgray inset, 
+				0px 4px 8px 2px rgba(32, 32, 32, 0.4);
+	border-radius: 0.25em 0.25em 0em 0em;
+	text-align: center;
 }
 
 .content {
 	display:flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	background-color:rgba(128, 128, 128, 0.7);
+	border-radius: 0em 0em 0.25em 0.25em;
+	width:calc(70% - 2px);
 	
-	width:70%;
 	margin: 0 auto;
-
-	border: solid 1px white;
-	margin-bottom: 1em;;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	
+	box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 0.2) inset;
+	
+	border-left: solid 1px rgba(200, 200, 200, 1);
+	border-bottom: solid 1px rgba(200, 200, 200, 1);
+	border-right: solid 1px rgba(200, 200, 200, 1);
+	margin-bottom: 4em;
 }
 
 .content article {
@@ -56,6 +73,7 @@ header h2 {
 	
 	width: 256px;
 	background-color:#fff;
+    
 }
 
 /* #content article:nth-child(odd) {
@@ -73,8 +91,23 @@ header h2 {
 	/* background: linear-gradient(to bottom, #f00); */
 }
 
-@media only screen and (max-width: 1200px) { 
+
+/* Tablet size */
+@media only screen and (max-width: 1220px) { 
+#sdl, #graphics {
+	width: 85%;
+}
 .content {
-	width: 90%;
+	width:calc(85% - 2px);
+}
+}
+
+/* Phone size */
+@media only screen and (max-width: 660px) { 
+#sdl, #graphics {
+	width: 70%;
+}
+.content {
+	width:calc(70% - 2px);
 }
 }
