--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,7 @@ header h2 {
 	text-shadow: 0px 2px 1px rgba(64, 64, 64, 0.7);
 	display:block;
 	width:70%;
+	max-width: 1140px;
 	position: relative;
 	z-index: 1;
 	margin: 0 auto;
@@ -55,6 +56,7 @@ header h2 {
 	background-color:rgba(128, 128, 128, 0.7);
 	border-radius: 0em 0em 0.25em 0.25em;
 	width:calc(70% - 2px);
+	max-width: calc(1140px - 2px);
 	
 	margin: 0 auto;
 	padding-top: 1em;
