--- a/src/main.css
+++ b/src/main.css
@@ -6,44 +6,53 @@ font-weight: 300;
 body {
 	margin: 0px;
 	padding: 0px;
-	background-color:#234A12;
-	background-image: url("../images/background-mirrored.png");
+	/* background-color:#234A12; */
+	background-color:black;
+	
+	/* background-image: linear-gradient(0deg, 
+						rgba(220,220,220,1) 95%, 
+						rgba(255,255,255,1) 100%); */
+	background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0.3) 100%),
+	url("../images/backgrounds/background-2-gamma.png");
 }
 
 
 header {
-	margin: 1em 0px;
+	margin: 2em 0px;
 }
 header h1 {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
+	
 	text-align: center;
-	margin: 0px;
 	color:white;
 	text-shadow: 0px 2px 1px rgba(32, 32, 32, 0.7);
+	
 }
 header h2 {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	font-size: 1.2em;
+	
 	/* text-shadow: 0px -1px 0px #000, 0px 1px 0px #fff; */
 	color: #eee;
 	text-align: center;
-	margin: 0px;
 }
 
 #sdl, #graphics {
-	text-shadow: 0px 2px 1px rgba(64, 64, 64, 0.7);
+	color:black;
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
+	padding-top: 0.1em;
+	padding-bottom: 0.1em;
 	display:block;
 	width:70%;
 	max-width: 1140px;
 	position: relative;
 	z-index: 1;
 	margin: 0 auto;
-	color:white;
 	/* background-color:rgba(200, 200, 200, 0.9); */
-	background-image: linear-gradient(to bottom, rgba(200, 200, 200, 1), rgba(150, 150, 150, 1));
-	box-shadow: 0px -1px 12px 2px lightgray inset, 
+	background-image: linear-gradient(to bottom, rgba(240, 240, 240, 1), rgba(200, 200, 200, 1));
+	box-shadow: 0px -1px 12px 2px darkgray inset, 
 				0px 4px 8px 2px rgba(32, 32, 32, 0.4);
 	border-radius: 0.25em 0.25em 0em 0em;
 	text-align: center;
@@ -53,7 +62,7 @@ header h2 {
 	display:flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	background-color:rgba(128, 128, 128, 0.7);
+	background-color:rgba(150, 150, 150, 0.7);
 	border-radius: 0em 0em 0.25em 0.25em;
 	width:calc(70% - 2px);
 	max-width: calc(1140px - 2px);
@@ -62,7 +71,7 @@ header h2 {
 	padding-top: 1em;
 	padding-bottom: 1em;
 	
-	box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 0.2) inset;
+	box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 0.3) inset;
 	
 	border-left: solid 1px rgba(200, 200, 200, 1);
 	border-bottom: solid 1px rgba(200, 200, 200, 1);
@@ -70,27 +79,69 @@ header h2 {
 	margin-bottom: 4em;
 }
 
+.content a {
+	display:block;
+	text-decoration: none;
+	color: inherit;
+	padding: 0px;
+	margin: 0px;
+}
 .content article {
 	margin: 0.7em;
 	
+	overflow: hidden;
 	width: 256px;
-	background-color:#fff;
-    
+	height: 256px;
+	background-color:#eee;
+	background-image: linear-gradient(0deg, 
+						rgba(220,220,220,1) 95%, 
+						rgba(255,255,255,1) 100%);
+	border-radius: 3px;
+	/* box-shadow: 0px 2px 3px 1px rgba(32, 32, 32, 1); */
+	box-shadow: /*0px 0px 0px 1px rgba(128,128,128, 1),
+				0px 0px 0px 2px rgba(32,32,32,1),*/
+				0px 1px 3px 4px rgba(16,16,16,0.3);
+				
+	position: relative;
+	top: 0px;
+	left: 0px;
+	transition: ease 0.15s;
+}
+.content article:hover {
+	top: -4px;
+	box-shadow: 0px 4px 8px 6px rgba(32,32,32,0.3);
 }
 
-/* #content article:nth-child(odd) {
-	background-color:black;
-} */
-
 .content article h3, .content article p {
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
+	margin: 0;
 	padding-left: 1em;
+	padding-top: 0.7em;
+	padding-bottom: 0.7em;
+/*	border-radius: 4px;
+	background-image: linear-gradient(to bottom, rgba(200, 200, 200, 1), rgba(150, 150, 150, 1));
+	box-shadow: 0px -1px 12px 2px lightgray inset, 
+				0px 4px 8px 2px rgba(32, 32, 32, 0.4);*/
+}
+
+.content article div.frame {
+	width: 256px;
+	height: 207px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	background-image: linear-gradient(180deg, 
+						rgba(64, 64, 64, 0.1) 0%, 
+						rgba(0, 0, 0, 0) 5%);
 }
 
 .content article img {
 	display:block;
-	width: 100%;
-	margin: 0 auto;
-	/* background: linear-gradient(to bottom, #f00); */
+	margin: 0;
+	padding: 0px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 
