--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,10 @@
 font-family: 'Open Sans', sans-serif;
 font-weight: 300;
 }
+.preload * {
+	transition: none !important;
+}
+
 
 body {
 	margin: 0px;
@@ -12,8 +16,13 @@ body {
 	/* background-image: linear-gradient(0deg, 
 						rgba(220,220,220,1) 95%, 
 						rgba(255,255,255,1) 100%); */
+	
+	min-height: 100vh;
 	background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0.3) 100%),
 	url("../images/backgrounds/background-2-gamma.png");
+
+	/* background: linear-gradient(to top, blue, red) fixed; */
+
 }
 
 
@@ -44,23 +53,40 @@ header h2 {
 	margin: 0;
 }
 
-#sdl, #graphics {
-	color:black;
-	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
-	padding-top: 0.1em;
-	padding-bottom: 0.1em;
-	display:block;
-	width:85%;
-	max-width: 1140px;
+div.title {
+	display: flex;
+	align-items: center;
 	position: relative;
 	z-index: 1;
+	padding-top: 0.1em;
+	padding-bottom: 0.1em;
 	margin: 0 auto;
+	max-width: 1140px;
 	/* background-color:rgba(200, 200, 200, 0.9); */
+
 	background-image: linear-gradient(to bottom, rgba(240, 240, 240, 1), rgba(200, 200, 200, 1));
 	box-shadow: 0px -1px 12px 2px darkgray inset, 
-				0px 4px 8px 2px rgba(32, 32, 32, 0.4);
+	0px 4px 8px 2px rgba(32, 32, 32, 0.4);
 	border-radius: 0.25em 0.25em 0em 0em;
-	text-align: center;
+	
+	color:black;
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
+}
+.left, .right {
+	flex: 1;
+}
+.title h2 {
+	margin: 0;
+	padding: 0;
+}
+.title a {
+	text-decoration: none;
+	color:black;
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
+	margin-left: 0.6em;
+	padding-right: 0.5em;
+	/* box-shadow: 1px 0px 0px 0px gray, 
+				2px 0px 0px 0px white; */
 }
 
 .content {
@@ -148,13 +174,16 @@ header h2 {
 	max-width: 100%;
 	max-height: 100%;
 }
-
+img.drop-shadow-filter {
+	filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+}
 footer {
 	text-align: center;
 	margin: 1em 0;
 	margin-bottom: 1.5em;
 }
 footer a {
+	display:none;
 	text-decoration: none;
 	color: white;
 	background-color:rgba(150, 150, 150, 0.7);
@@ -165,7 +194,7 @@ footer a {
 
 /* Dekstop size */
 @media only screen and (max-width: 1350px) { 
-#sdl, #graphics {
+.title {
 	width: 860px;
 }
 .content {
@@ -175,17 +204,20 @@ footer a {
 
 /* Tablet size */
 @media only screen and (max-width: 950px) { 
-#sdl, #graphics {
+.title {
 	width: 580px;
 }
 .content {
 	width:calc(580px - 2px);
-}	
+}
+footer a {
+	display:inline;
+}
 }
 	
 /* Phone size */
 @media only screen and (max-width: 660px) { 
-#sdl, #graphics {
+.title {
 	width: 300px;
 }
 .content {
