--- a/styles/contentStyle.css
+++ b/styles/contentStyle.css
@@ -61,6 +61,7 @@ div.title {
 	padding-top: 0.1em;
 	padding-bottom: 0.1em;
 	margin: 0 auto;
+	width: 85%;
 	max-width: 1140px;
 	/* background-color:rgba(200, 200, 200, 0.9); */
 
@@ -85,23 +86,17 @@ div.title {
 	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.7);
 	margin-left: 0.6em;
 	padding-right: 0.5em;
-	/* box-shadow: 1px 0px 0px 0px gray, 
-				2px 0px 0px 0px white; */
 }
 
 .content {
-	display:flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	background-color:rgba(150, 150, 150, 0.7);
+	background-color:rgba(200, 200, 200, 0.3);
 	border-radius: 0em 0em 0.25em 0.25em;
 	box-sizing: border-box;
-	width:calc(85%);
-	max-width: calc(1140px);
+	width: calc(85%);
+	max-width: 1140px;
 	
 	margin: 0 auto;
-	padding-top: 1em;
-	padding-bottom: 1em;
+	padding: 1em;
 	
 	box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 0.3) inset;
 	
@@ -110,7 +105,9 @@ div.title {
 	border-right: solid 1px rgba(200, 200, 200, 1);
 	margin-bottom: 2em;
 }
-
+.content p {
+	text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.7);
+}
 .content a {
 	display:block;
 	text-decoration: none;
@@ -171,7 +168,7 @@ div.title {
 .content article img {
 	display:block;
 	margin: 0;
-	padding: 0;
+	padding: 0px;
 	max-width: 100%;
 	max-height: 100%;
 }
@@ -191,55 +188,4 @@ footer a {
 	text-shadow: 0px 2px 1px rgba(32, 32, 32, 0.7);
 	border-radius: 4px;
 	padding: 0.1em 0.3em;
-}
-
-/* Smaller Dekstop size */
-@media only screen and (max-width: 1350px) { 
-.title {
-	width: 860px;
-}
-.content {
-	width: 860px;
-}
-div.title div {
-	visibility: hidden;
-}
-}
-
-/* Tablet size */
-@media only screen and (max-width: 950px) { 
-.title {
-	width: 580px;
-}
-.content {
-	width: 580px;
-}
-footer a {
-	display:inline;
-}
-div.title div {
-	visibility: hidden;
-}
-}
-	
-/* Phone size */
-@media only screen and (max-width: 660px) { 
-.title {
-	width: 325px;
-}
-.content {
-	width: 325px;
-}
-.content article {
-	width: 280px;
-	height: 280px;
-}
-.content article div.frame {
-	width: 280px;
-	height: 231px;
-}
-
-div.title div {
-	visibility: hidden;
-}
 }
