--- a/styles/contentStyle.css
+++ b/styles/contentStyle.css
@@ -190,7 +190,7 @@ div.center {
     background-color: transparent;
 	background-image: linear-gradient(0deg,  hsla(0.0, 0.0%, 20.0%, 1.00) 0.0% , hsla(0.0, 0.0%, 10.0%, 1.00) 50.5% , hsla(0.0, 0.0%, 20.0%, 1.00) 50.7% , hsla(0.0, 0.0%, 30.0%, 1.00) 100.0% );
 	border: 1px solid hsla(0.0, 0.0%, 0.0%, 1.00);
-	box-shadow: /*0px 1px 2px hsla(0.0, 0.0%, 0.0%, 0.50),*/ inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
+	box-shadow: 0px 1px 2px hsla(0.0, 0.0%, 0.0%, 0.50), inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
 	/* width: 100px; */
 	padding-left: 1em;
 	padding-right: 1em;
@@ -201,9 +201,11 @@ div.center {
 }
 .button-left a {
 	border-left: none;
+	box-shadow: 1px 1px 1px hsla(0.0, 0.0%, 0.0%, 0.50), inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
 }
 .button-right a {
 	border-right: none;
+	box-shadow: -1px 1px 1px hsla(0.0, 0.0%, 0.0%, 0.50), inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
 }
 .button-right a::after {
     content: "";
@@ -212,7 +214,8 @@ div.center {
 	border-top: 1px solid black;
 	border-right: 1px solid black;
 	box-shadow: inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
-	
+	box-shadow: 1px 0px 1px hsla(0.0, 0.0%, 0.0%, 0.50), inset 0px 1px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
+
 	position: absolute;
 	z-index: -1;
 	top: 2px;
@@ -232,10 +235,11 @@ div.center {
 	border-top: 1px solid black;
 	border-right: 1px solid black;
 	box-shadow: inset -1px 0px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
-	
+	box-shadow: 0px -1px 1px hsla(0.0, 0.0%, 0.0%, 0.50), inset -1px 0px 0px hsla(0.0, 0.0%, 100.0%, 0.15);
+
 	position: absolute;
 	z-index: -2;
-    top: 2px;
+	top: 2px;
     left: -8px;
 
 	border-radius: 3px;
