--- a/styles/main.css
+++ b/styles/main.css
@@ -220,6 +220,13 @@ footer a {
 div.title div {
 	visibility: hidden;
 }
+.content article {
+	transition: none;
+}
+.content article:hover {
+	top: 0px;
+	box-shadow: 0px 1px 3px 4px rgba(16,16,16,0.3);
+}
 }
 	
 /* Phone size */
