--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,6 @@ font-weight: 300;
 	transition: none !important;
 } */
 
-
 body {
 	margin: 0px;
 	padding: 0px;
@@ -32,25 +31,24 @@ header {
 	padding-top: 1em;
 	padding-bottom: 2em;
 	
-	
-}
-header h1 {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
+	margin: auto 0;
 	text-align: center;
 	color:white;
 	text-shadow: 0px 2px 1px rgba(32, 32, 32, 0.7);
+}
+header h1, header h2 {
 	margin: 0;
 }
+header h1 a, header h2 a {
+	color: white;
+	text-decoration: none;
+}
 header h2 {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
 	font-size: 1.2em;
-	
 	/* text-shadow: 0px -1px 0px #000, 0px 1px 0px #fff; */
 	color: #eee;
-	text-align: center;
-	margin: 0;
 }
 
 div.title {
