--- a/styles/contentStyle.css
+++ b/styles/contentStyle.css
@@ -292,6 +292,7 @@ footer a {
 	
 /* Phone size */
 @media only screen and (max-width: 660px) { 
+
 div.right, div.left {
 	float: none;
 	display: block;
@@ -319,5 +320,19 @@ div.right, div.left {
 	/* margin-left: 0.5em; */
 	margin-bottom: 1em;
 }
-
+div.title {
+	width: 100%;
+}
+.content {
+	/* width: 325px; */
+	width: 100%;
+}
+.content article {
+	width: 360px;
+	height: 340px;
+}
+.content article div.frame {
+	width: 360px;
+	height: 291px; /* subracted 49 (title height) from width */
+}
 }
